--- a/package.json
+++ b/package.json
@@ -13,15 +13,22 @@
     "@heroicons/react": "^2.1.4",
     "@material-tailwind/react": "^2.1.9",
     "@supabase/supabase-js": "^2.44.2",
+    "@tiptap/extension-character-count": "^2.4.0",
+    "@tiptap/extension-placeholder": "^2.4.0",
+    "@tiptap/pm": "^2.4.0",
+    "@tiptap/react": "^2.4.0",
+    "@tiptap/starter-kit": "^2.4.0",
     "@types/react": "^18.2.42",
     "jotai": "^2.8.4",
     "next": "14.2.4",
     "react": "^18",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18",
     "react-toastify": "^10.0.5"
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/react-copy-to-clipboard": "^5.0.7",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
