--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@headlessui/react": "^2.1.1",
     "@heroicons/react": "^2.1.4",
     "@material-tailwind/react": "^2.1.9",
+    "@stripe/react-stripe-js": "^2.7.3",
+    "@stripe/stripe-js": "^4.1.0",
     "@supabase/supabase-js": "^2.44.2",
     "@tiptap/extension-character-count": "^2.4.0",
     "@tiptap/extension-placeholder": "^2.4.0",
@@ -24,7 +26,8 @@
     "react": "^18",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18",
-    "react-toastify": "^10.0.5"
+    "react-toastify": "^10.0.5",
+    "stripe": "^16.2.0"
   },
   "devDependencies": {
     "@types/node": "^20",
