--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "@tiptap/react": "^2.4.0",
     "@tiptap/starter-kit": "^2.4.0",
     "@types/react": "^18.2.42",
+    "exponential-backoff": "^3.1.1",
     "jotai": "^2.8.4",
     "next": "14.2.4",
+    "openai": "^4.52.7",
     "react": "^18",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18",
