--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@material-tailwind/react": "^2.1.9",
     "@stripe/react-stripe-js": "^2.7.3",
     "@stripe/stripe-js": "^4.1.0",
-    "@supabase/supabase-js": "^2.44.2",
+    "@supabase/ssr": "^0.4.0",
+    "@supabase/supabase-js": "^2.44.4",
     "@tiptap/extension-character-count": "^2.4.0",
     "@tiptap/extension-placeholder": "^2.4.0",
     "@tiptap/pm": "^2.4.0",
