changes to cron job

--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,10 @@
   "crons": [
     {
       "path": "/api/resetMonthlyLimits",
-      "schedule": "0 0 1 * *"
+      "schedule": "0 0 1 * *",
+      "headers": {
+        "x-api-key": "GrubbyAICronKey"
+      }
     }
   ]
 }
