--- a/vercel.json
+++ b/vercel.json
@@ -2,10 +2,7 @@
   "crons": [
     {
       "path": "/api/resetMonthlyLimits",
-      "schedule": "0 0 1 * *",
-      "headers": {
-        "x-api-key": "GrubbyAICronKey"
-      }
+      "schedule": "0 0 1 * *"
     }
   ]
 }
