--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18",
     "react-toastify": "^10.0.5",
+    "sass": "^1.77.8",
     "stripe": "^16.2.0"
   },
   "devDependencies": {
@@ -39,6 +40,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
     "postcss": "^8",
+    "supabase": "^1.187.10",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
