--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@headlessui/react": "^2.1.1",
     "@heroicons/react": "^2.1.4",
     "@material-tailwind/react": "^2.1.9",
+    "@next/third-parties": "^14.2.5",
     "@stripe/react-stripe-js": "^2.7.3",
     "@stripe/stripe-js": "^4.1.0",
     "@supabase/ssr": "^0.4.0",
@@ -24,7 +25,7 @@
     "@types/react": "^18.2.42",
     "exponential-backoff": "^3.1.1",
     "jotai": "^2.8.4",
-    "next": "14.2.4",
+    "next": "^14.2.5",
     "openai": "^4.52.7",
     "react": "^18",
     "react-copy-to-clipboard": "^5.1.0",
